--- a/montecarlo-simulations.ipynb
+++ b/montecarlo-simulations.ipynb
@@ -466,7 +466,7 @@
     "\n",
     "The returns of asset 1 and asset 2 follow a multivariate normal distribution with the specified correlation.  \n",
     "\n",
-    "For each asset, the modelisation is the same as in the previous case (1 ear).  \n",
+    "For each asset, the modelisation is the same as in the previous case (1 year).  \n",
     "\n",
     "At the end, both amounts are added.\n",
     "\n",
